# DeepLearning

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  phase1.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  MATH.md  TUTORIAL.md  value_class_enhancements.md  value_class_reference.md  value_mlp_mnist.md  value_mlp_quickref.md  value_mlp_summary.md
docs/source/: conf.py  index.rst
docs/source/api/: autograd.rst  losses.rst  mnist_mlp.rst  neural_net.rst  value_mlp.rst
scripts/: demo_autograd.py  download_mnist.py  train_autograd_mnist.py  train_mnist.py  train_value_mlp_mnist.py
src/deeplearning/: __init__.py  autograd.py  autograd_mlp.py  losses.py  mnist_mlp.py  neural_net.py  value_mlp.py
tests/: __init__.py  test_autograd.py  test_autograd_mlp.py  test_gradients.py  test_layers.py  test_losses.py  test_mlp.py  test_value_mlp.py
